# personal

./: .gitmodules
Jonny - Python/: Polar Turtle V2.0.py  Polar Turtle.py
Jonny - Python/Trefoil/: V1 quick but no layers.py  V10 ultimate ... ongoing try to remove sub loop.py  V11 Code cleanup take 1.py  V11 smooth colour.py  V12 indentation removal.py  V13 Code cleanup take 2.py  V14 - Working.py  V15 - Colours.py  V16 - Colours v2.py  V17 - Colours v3.py
dotfiles/: dot_bash_profile  dot_bashrc
dotfiles/dot_ssh/: config  private_authorized_keys
dotfiles/dot_vim/: vimrc
howtopassai.com/: docusaurus.config.js  package-lock.json  package.json
jprice.uk/: .gitignore  .gitmodules  README.md  config.toml  hugo.toml
kobeni/: MumbleUDP_pb2.py  main.py  mumble.py  pyproject.toml  red-bot.txt
kruitana.com/: README.md  config.toml  hugo.toml
lambda-file-server/: .gitignore  Makefile  pyproject.toml
lambda-file-server/lambda_file_server/: 404.html  index.html  lambda_function.py  s3.py
lambda-file-server/tests/: test_lambda_function.py
python/: arduino.py  caesar_cipher_1.py  caesar_cipher_2.py  caesar_cipher_3.py  guessing game.py  primes.py  rigged_secret_santa.py  scribble.py  secret_santa-indexes.py  secret_santa-numberphile.py  secret_santa-old.py  secret_santa.py  tt_secret_santa.txt
sudoku/src/: main.rs  (+1 more)
tco_rust/: Cargo.toml
the-rust-book/: README.md
user-scripts/: upload  upload.py
velocity/: Dockerfile  forwarding.secret  readme.md  start.sh  update.sh  velocity.toml
weekday_calculator/: Cargo.toml
weekday_calculator/src/: main.rs
(+73 files in other folders)
