[tool.poetry]
name = "lambda-file-server"
version = "0.1.0"
description = ""
authors = ["Joshua Price <git@jprice.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.158"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
