[package]
name = "temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4", default-features = false }
num-traits = "0.2.18"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"